# tanoshi-extensions

./: .gitignore  Cargo.toml  Readme.md  index.json  lerna.json  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: build.yml  check.yml  ci.yml  master.yml  publish.yml  rust.yml  test.yml
catmanga/: Cargo.toml
catmanga/src/: data.rs  main.rs
common/guyalib/: Cargo.toml
common/guyalib/src/: lib.rs
common/madara/: Cargo.toml
common/madara/src/: lib.rs
common/mangakakalot/: Cargo.toml
common/mangakakalot/src/: lib.rs
common/nepnep/: Cargo.toml
common/nepnep/src/: dto.rs  lib.rs
common/networking/: Cargo.toml
common/networking/src/: lib.rs
common/wpmangareader/: Cargo.toml
common/wpmangareader/src/: lib.rs
common/wpmangastream/: Cargo.toml
common/wpmangastream/src/: lib.rs
extensions/1stkissmanhua/: Cargo.toml
extensions/1stkissmanhua/src/: lib.rs
extensions/365Manga/: Cargo.toml
extensions/365manga/: Cargo.toml
extensions/365manga/src/: lib.rs
extensions/alphascans/: Cargo.toml
extensions/alphascans/src/: lib.rs
extensions/asuragg/: Cargo.toml
extensions/asuragg/src/: lib.rs
extensions/asurascans/: Cargo.toml
extensions/asurascans/src/: lib.rs
extensions/catmanga/: Cargo.toml
extensions/catmanga/src/: data.rs  main.rs
extensions/firstkissmanhua/: Cargo.toml
extensions/firstkissmanhua/src/: lib.rs
extensions/guya/: Cargo.toml
extensions/guya/src/: data.rs  lib.rs  main.rs
extensions/isekaiscan/: Cargo.toml
extensions/isekaiscan/src/: lib.rs
extensions/isekaiscanmanga/: Cargo.toml
extensions/isekaiscanmanga/src/: lib.rs
extensions/leviatanscan/: Cargo.toml
extensions/leviatanscan/src/: lib.rs
extensions/leviatanscans/: Cargo.toml
extensions/leviatanscans/src/: lib.rs
extensions/mangadex/: Cargo.toml
extensions/mangadex/src/: filter.rs  lib.rs  main.rs
extensions/mangadex/src/data/: manga.rs  mod.rs
extensions/mangadex/src/dto/: manga.rs  mod.rs
extensions/mangakakalot/: Cargo.toml
extensions/mangakakalot/src/: lib.rs
extensions/mangalife/: Cargo.toml
extensions/mangalife/src/: filters.ron  lib.rs  main.rs
extensions/manganato/: Cargo.toml
extensions/manganato/src/: lib.rs
extensions/mangasee/: Cargo.toml
extensions/mangasee/src/: lib.rs  main.rs  test.rs  util.rs
extensions/mangatx/: Cargo.toml
extensions/mangatx/src/: lib.rs
extensions/manhuafast/: Cargo.toml
extensions/manhuafast/src/: lib.rs
extensions/manhwa18-cc/: Cargo.toml
extensions/manhwa18-cc/src/: main.rs
extensions/manhwa18_cc/: Cargo.toml
extensions/manhwa18_cc/src/: main.rs
extensions/manhwa18cc/: Cargo.toml
extensions/manhwa18cc/src/: lib.rs
extensions/mmscans/: Cargo.toml
extensions/mmscans/src/: lib.rs
extensions/nhentai/: Cargo.toml
extensions/nhentai/src/: dto.rs  lib.rs  main.rs
extensions/reaperscan/: Cargo.toml
extensions/reaperscan/src/: lib.rs
extensions/reaperscans/: Cargo.toml
extensions/reaperscans/src/: lib.rs
extensions/tritiniascans/: Cargo.toml
extensions/tritiniascans/src/: lib.rs
generate_json/: Cargo.toml
generate_json/src/: extension.rs  main.rs
lib/nepnep/: Cargo.toml
lib/nepnep/src/: data.rs  lib.rs
local/: Cargo.toml
local/src/: lib.rs  local.rs
mangadex/: Cargo.toml  build.rs
mangadex/src/: lib.rs  main.rs  mangadex.rs
mangadex/src/data/: mod.rs
mangalife/: Cargo.toml
mangalife/src/: main.rs  util.rs
mangasee/: Cargo.toml  build.rs
mangasee/src/: filters.ron  lib.rs  main.rs  mangasee.rs  util.rs
multisrc/guya/: package-lock.json  package.json
multisrc/guya/src/: dto.ts  guya.ts  guyabase.ts
multisrc/guya/src/Guya/: index.ts
multisrc/guya/tests/: guya.test.ts
multisrc/madara/: package.json
multisrc/madara/src/: madara.ts
multisrc/madara/src/Manhwa18cc/: index.ts
multisrc/madara/tests/: manhwa18cc.test.ts
multisrc/nepnep/: package-lock.json  package.json
multisrc/nepnep/src/: dto.ts  filters.json  nepnep.ts
multisrc/nepnep/src/MangaLife/: index.ts
multisrc/nepnep/src/MangaSee/: index.ts
multisrc/nepnep/tests/: mangasee.test.js  mangasee.test.ts
nhentai/: Cargo.toml
nhentai/src/: main.rs
src/MangaDex/: package.json
src/MangaDex/src/: dto.ts  index.ts  tag.json
src/MangaDex/tests/: mangadex.test.js  mangadex.test.ts
src/NHentai/: package.json
src/NHentai/src/: dto.ts  index.ts
src/NHentai/tests/: nhentai.test.ts
x86_64-apple-darwin/: asuragg.dylib  asurascans.dylib  firstkissmanhua.dylib  guya.dylib  isekaiscanmanga.dylib  isekaiscanmmanga.dylib  leviatanscans.dylib  mangadex.dylib  mangakakalot.dylib  mangalife.dylib  manganato.dylib  mangasee.dylib  mangatx.dylib  manhuafast.dylib  manhwa18cc.dylib  mmscans.dylib  nhentai.dylib  three_sixty_five_manga.dylib  tritiniascans.dylib
x86_64-apple-darwin/x86_64-apple-darwin/: leviatanscans.dylib  mangakakalot.dylib  mangalife.dylib  mangasee.dylib  manhuafast.dylib  manhwa18cc.dylib  three_sixty_five_manga.dylib
