[package]
name = "catmanga"
version = "0.1.3"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12"
chrono = {version="0.4", features=["serde"]}
serde = {version="1", features=["derive"]}
serde_json="1"
serde_urlencoded = "0.7"
serde_yaml="0.8"
html-escape = "0.2"
base64 = "0.13"
fancy-regex = "0.7.0"
tanoshi-lib = "0.23.2"
tanoshi-util = "0.1.1"