[package]
name = "generate_json"
version = "0.1.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
libloading = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.6"
serde_derive = "1.0"
serde_yaml = "0.8"
tanoshi-lib = {git = "https://github.com/faldez/tanoshi-lib", branch = "master"}
