[package]
name = "local"
version = "2.0.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
zip = "0.5"
fancy-regex = {version = "0.3"}
tanoshi-lib = {version = "0.8", features = ["extensions"]}
anyhow = "1"
ureq = "1"
scraper = "0.12"
chrono = "0.4"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.6"
serde_yaml="0.8"
dirs = "2.0.2"