[package]
name = "local"
version = "2.0.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
zip = { version = "0.5" }
fancy-regex = {version = "0.3"}
tanoshi-lib = { version = "0.12", features = ["extensions"]}
anyhow = "1"
serde = {version = "1.0", features = ["derive"]}
serde_yaml="0.8"
dirs = "3"

[dependencies.time]
version = "0.2.16"