[package]
name = "mangadex"
version = "2.1.4"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
tanoshi-lib = { version = "0.21", features = ["extensions"]}
anyhow = "1"
ureq = {version="1", features=["json"]}
scraper = "0.12"
chrono = "0.4"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
serde_yaml="0.8"
lazy_static = "1.4"
bimap = "0.5"
rayon = "1.4.1"
