[package]
name = "mangadex"
version = "0.1.1"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.8"
serde_yaml = "0.8"
html-escape = "0.2"
dirs = "3"
base64 = "0.13"
fancy-regex = "0.7.0"
ron = "0.6.4"
tanoshi-lib = { version = "0.23.3" }
tanoshi-util = { version = "0.1.2" }
