[package]
name = "mangasee"
version = "3.0.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
tanoshi-lib = { version = "0.21", features = ["extensions"]}
anyhow = "1"
ureq = "2"
scraper = "0.12"
chrono = {version="0.4", features=["serde"]}
serde = {version="1", features=["derive"]}
serde_json="1"
serde_urlencoded = "0.7"
serde_yaml="0.8"
html-escape = "0.2"
dirs = "3"
base64 = "0.13"
rayon = "1.4.1"
fancy-regex = "0.6.0"