[package]
name = "mangasee"
version = "4.0.3"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

[dependencies]
scraper = "0.12"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13"
fancy-regex = "0.7.0"
ron = "0.6.4"
tanoshi-lib = "0.24"
tanoshi-util = "0.2.1"

[features]
test = ["tanoshi-util/__test"]
