[package]
name = "guyalib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tanoshi-lib = { git = "https://github.com/faldez/tanoshi", branch = "libloading" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
fancy-regex = "0.7.1"
scraper = "0.12.0"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
lazy_static = "1"
log = "0.4"
