[package]
name = "networking"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.15"
cookie_store = "0.15"
ureq = { version = "2", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
time = "0.2.27"
url = "2"
