[package]
name = "catmanga"
version = "0.1.7"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13"
tanoshi-lib = "0.24"
tanoshi-util = "0.2.1"

[features]
test = ["tanoshi-util/__test"]
