[package]
name = "guya"
version = "0.1.1"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
tanoshi-lib = { git = "https://github.com/faldez/tanoshi", branch = "master" }
guyalib = { path = "../../common/guyalib" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
fancy-regex = "0.7.1"
scraper = "0.12.0"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
lazy_static = "1"
log = "0.4"
