[package]
name = "mangadex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tanoshi-lib = { git = "https://github.com/faldez/tanoshi", branch = "master" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
fancy-regex = "0.7.1"
scraper = "0.12.0"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
lazy_static = "1"
log = "0.4"
serde_qs = "0.8.5"
phf = { version = "0.10.1", features = ["macros"] }
