[package]
name = "mangadex"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tanoshi-lib = "0.27.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
fancy-regex = "0.8.0"
scraper = "0.12.0"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
lazy_static = "1"
log = "0.4"
serde_qs = "0.9.1"
phf = { version = "0.10.1", features = ["macros"] }
