[package]
name = "mangakakalot"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tanoshi-lib = "0.27.0"
mangakakalot-common = { path = "../../common/mangakakalot" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
fancy-regex = "0.8"
scraper = "0.12.0"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
lazy_static = "1"
log = "0.4"
