[package]
name = "nhentai"
version = "0.1.3"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.13"
fancy-regex = "0.7.0"
ron = "0.6.4"
scraper = "0.12"
tanoshi-lib = { version = "0.24" }
tanoshi-util = "0.2.1"

[features]
test = ["tanoshi-util/__test"]
