[package]
name = "nhentai"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
networking = { path = "../../common/networking" }
tanoshi-lib = "0.27.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
fancy-regex = "0.10.0"
scraper = "0.13"
anyhow = "1"
serde_json = "1"
lazy_static = "1"
log = "0.4"
serde_qs = "0.9"
phf = { version = "0.10.1", features = ["macros"] }
serde-aux = "3.0.1"
