[package]
name = "nepnep"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13"
fancy-regex = "0.7.0"
ron = "0.6.4"
tanoshi-lib = "0.25.3"
tanoshi-util = "0.3.0"

[features]
test = ["tanoshi-util/__test"]
